# mini-synth

./: .gitignore  AGENTS.md  README.md  mini-synth.desktop  pyproject.toml  requirements.txt  run.sh
assets/web/: app.js  index.html  style.css
assets/web/themes/: ms90-template.js  tube60-template.js
assets/web/themes/ms90/: AGENTS.md  style.css
assets/web/themes/neonforge/: AGENTS.md  style.css  template.js
assets/web/themes/tube60/: AGENTS.md  style.css  template.js
config/: instruments.yaml
scripts/: build-deb.sh  install-ubuntu.sh  make-icon.py  midi-debug.py  midi-monitor.py
src/: __init__.py  application.py  main.py
src/audio/: __init__.py  factory.py  fluidsynth_backend.py  mock_backend.py  subprocess_backend.py  synthesizer.py
src/config/: __init__.py  loader.py  models.py
src/midi/: __init__.py  alsa.py  device_manager.py
src/ui/: __init__.py  buttons.py  control_panel.py  decorations.py  instrument_button.py  main_window.py  settings_window.py  status_indicator.py  styles.py  themes.py  vfd.py  web_bridge.py
src/util/: __init__.py  signal.py
tests/: conftest.py  test_config.py  test_instrument_selection.py  test_knob_controls.py  test_midi_device_filter.py  test_octave.py  test_synthesizer_mock.py  test_themes.py  test_volume.py
